@@ -1820,6 +1820,8 @@ if(FALSE) {
             ext <- sub(paste0(base, "."),  "", a, fixed = TRUE)
             nobj <- ""
             if (nzchar(ext)) {
+                ## This will not work if there are no source files in
+                ## the top-level directory
                 if (ext %in% c("cc", "cpp")) {
                     with_cxx <- TRUE
                     nobj <- base
@@ -1889,6 +1891,7 @@ if(FALSE) {
             else if (cxxstd == "CXX98") {
                 use_cxx98 <- TRUE
             }
+            with_cxx <- TRUE
         }
     } else if (file.exists("Makevars")) {
         makefiles <- c("Makevars", makefiles)
@@ -1911,6 +1914,7 @@ if(FALSE) {
             else if (cxxstd == "CXX98") {
                 use_cxx98 <- TRUE
             }
+            with_cxx <- TRUE
         }
     }
     if (!use_cxx11 && !use_cxx14 && !use_cxx17 && !use_cxx98) {
@@ -1945,6 +1949,7 @@ if(FALSE) {
                 use_cxx98 <- TRUE
             }
         }
+        with_cxx <- TRUE
     }
 
     if (with_cxx) {
